--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
             "email": "james@alt-three.com"
         }
     ],
+    "require": {
+        "php": ">=4.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
         "pestphp/pest": "^0.2.4"
