--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         ]
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
     "scripts": {
         "test": "pest"
     }
